--- a/index.html
+++ b/index.html
@@ -3,13 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>nivea</title>
+    <title>좋은습관PT</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="wrap">
-        
+    <div class="wrap" id="main">
+        <header class="header">
+            <!-- pc 헤더 -->
+            <div class="pc_display">
+                <h1 class="logo">
+                    <a href="#">
+                        <img class="logo-img" src="img/logo-1.svg" alt="좋은습관 로고-1">
+                    </a>
+                </h1>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a href="#">좋은습관PT STUDIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">회원후기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">채용</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">무료체험</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">가맹문의</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- mob 헤더 -->
+            <div class="mob_display">
+                <h1 class="logo">
+                    <a href="#">
+                        <img class="logo-img" src="img/logo-2.svg" alt="좋은습관 로고-2">
+                    </a>
+                </h1>
+                <div class="content">
+                    <div class="free-btn-box">
+                        <button type="button" class="btn free-btn">무료체험</button>
+                    </div>
+                    <div class="menu-icon">
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                    </div>
+                </div>
+                <div class="nav-container">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a href="#">좋은습관PT STUDIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">회원후기</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">채용</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">무료체험</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">가맹문의</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
     </div>
 </body>
 </html>
