--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 </div>
             </div>
         </header>
+
+        <main>
+            
+        </main>
     </div>
 </body>
 </html>
