--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrap" id="main">
+
         <header class="header">
             <!-- pc 헤더 -->
             <div class="pc_display">
@@ -75,9 +76,23 @@
             </div>
         </header>
 
-        <main>
-            
+        <main class="main">
+            <div class="main-visual">
+                <div class="content">
+                    <div class="visual-img">
+                        <img src="img/main-visual/visual-1.jpg" alt="좋은습관 메인 비주얼-1">
+                    </div>
+                    <div class="visual-txt">
+                        <h4>
+                            <span>더 나은 나를 위해, 더 나은 내일을 위해.</span>
+                            For a better me,<br>
+                            For a better tomorrow.
+                        </h4>
+                    </div>
+                </div>
+            </div>
         </main>
+
     </div>
 </body>
 </html>
