--- a/index.html
+++ b/index.html
@@ -12,49 +12,14 @@
     <div class="wrap" id="main">
 
         <header class="header">
-            <!-- pc 헤더 -->
-            <div class="pc_display">
-                <h1 class="logo">
-                    <a href="#">
-                        <img class="logo-img" src="img/logo-1.svg" alt="좋은습관 로고-1">
-                    </a>
-                </h1>
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a href="#">좋은습관PT STUDIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">회원후기</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">채용</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">무료체험</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">가맹문의</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- mob 헤더 -->
-            <div class="mob_display">
-                <h1 class="logo">
-                    <a href="#">
-                        <img class="logo-img" src="img/logo-2.svg" alt="좋은습관 로고-2">
-                    </a>
-                </h1>
-                <div class="content">
-                    <div class="free-btn-box">
-                        <button type="button" class="btn free-btn">무료체험</button>
-                    </div>
-                    <div class="menu-icon">
-                        <span class="menu-line"></span>
-                        <span class="menu-line"></span>
-                        <span class="menu-line"></span>
-                    </div>
-                </div>
-                <div class="nav-container">
+            <div class="inner">
+                <!-- pc 헤더 -->
+                <div class="pc_display">
+                    <h1 class="logo">
+                        <a href="#">
+                            <img class="logo-img" src="img/logo-1.svg" alt="좋은습관 로고-1">
+                        </a>
+                    </h1>
                     <ul class="nav">
                         <li class="nav-item">
                             <a href="#">좋은습관PT STUDIO</a>
@@ -73,24 +38,72 @@
                         </li>
                     </ul>
                 </div>
+                <!-- mob 헤더 -->
+                <div class="mob_display">
+                    <h1 class="logo">
+                        <a href="#">
+                            <img class="logo-img" src="img/logo-2.svg" alt="좋은습관 로고-2">
+                        </a>
+                    </h1>
+                    <div class="content">
+                        <div class="free-btn-box">
+                            <button type="button" class="btn free-btn">무료체험</button>
+                        </div>
+                        <div class="menu-icon">
+                            <span class="menu-line"></span>
+                            <span class="menu-line"></span>
+                            <span class="menu-line"></span>
+                        </div>
+                    </div>
+                    <div class="nav-container">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="#">좋은습관PT STUDIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">회원후기</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">채용</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">무료체험</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">가맹문의</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </header>
 
         <main class="main">
+            <!-- main-visual -->
             <div class="main-visual">
                 <div class="content">
-                    <div class="visual-img">
-                        <img src="img/main-visual/visual-1.jpg" alt="좋은습관 메인 비주얼-1">
+                    <div class="img-box">
+                        <img class="visual-img" src="img/main-visual/visual-1.jpg" alt="좋은습관 메인 비주얼-1">
+                        <div class="free-btn-box">
+                            <button type="button" class="btn free-btn">무료체험 바로가기</button>
+                        </div>
+                        <div class="since-box">
+                            <img class="since-img" src="img/main-visual/since.svg" alt="좋은습관 since 이미지">
+                        </div>
                     </div>
-                    <div class="visual-txt">
-                        <h4>
-                            <span>더 나은 나를 위해, 더 나은 내일을 위해.</span>
-                            For a better me,<br>
-                            For a better tomorrow.
-                        </h4>
+                    <div class="txt-box">
+                        <ul class="visual-txt">
+                            <li class="kor">더 나은 나를 위해, 더 나은 내일을 위해.</li>
+                            <li class="eng">
+                                FOR A BETTER ME,<br>
+                                FOR A BETTER TOMORROW.
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </div>
+            </div> <!-- //main-visual -->
+
+
         </main>
 
     </div>
